package io.gitlab.plunts.gradle.plantuml.examples.dto;

public class SteeringWheelDto extends AbstractDto {

}
